Update content and resolve overflow issues

--- a/index.css
+++ b/index.css
@@ -51,8 +51,8 @@ body {
 }
 
 .custom-overlay {
-    height: 100%;
-    width: 100%;
+    height: inherit;
+    width: inherit;
     opacity: 0;
     transition: .5s ease;
     background-color: #ffffff;
